--- a/index.html
+++ b/index.html
@@ -13,48 +13,53 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4; /* Rahul's tight line spacing */
+            line-height: 1.4;
             margin: 0;
             padding: 0;
+            overflow: hidden; /* Disables scroll bar for one-page fit */
         }
 
         .container {
             max-width: 850px;
-            margin: 40px auto; /* Balanced top margin */
+            margin: 3vh auto; 
             padding: 0 20px;
+            height: 94vh; 
+            display: flex;
+            flex-direction: column;
         }
 
-        /* Header Section - Left Aligned */
+        /* Header Section */
         header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: left;
+            text-align: center; /* Centered as requested */
         }
 
-        /* Name Header: Lato 24pt, Unbolded */
+        /* Name Header: Lato 24pt, Unbolded, Centered */
         .bio-text h1 {
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
             margin: 0 0 10px 0;
             color: #000;
+            text-align: center;
         }
 
-        /* Bio Paragraph: Max-width forces it into a 3-line block like Rahul's */
+        /* Bio Paragraph: Spaced and Wrapped exactly */
         .bio-text p {
             margin: 0;
-            max-width: 580px; 
-            line-height: 1.4;
+            line-height: 1.45;
+            display: inline-block;
         }
 
-        /* Hyperlink Styles: turns orange on hover, no underline */
+        /* Hyperlink Styles */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -85,24 +90,36 @@
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 40px;
-            margin-bottom: 20px;
+            margin-top: 2vh;
+            margin-bottom: 15px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 8px;
+            padding-bottom: 6px;
             font-weight: 400;
             color: #000;
+            text-align: left;
+        }
+
+        .project-list {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 30px;
+            margin-bottom: 2vh;
             align-items: flex-start;
         }
 
-        /* Project Thumbnails: Clean crop without bars */
+        .project-entry:last-child {
+            margin-bottom: 0;
+        }
+
+        /* Project Thumbnails */
         .project-img, .placeholder-box {
-            width: 280px; 
-            height: 160px; 
+            width: 270px; 
+            height: 155px; 
             margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
@@ -143,19 +160,19 @@
             margin: 4px 0 !important;
         }
 
-        /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 6px !important;
+            margin-top: 5px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
             max-width: 530px;
-            line-height: 1.45;
+            line-height: 1.4;
         }
 
         @media (max-width: 750px) {
-            .container { margin: 20px auto; }
+            body { overflow: auto; }
+            .container { height: auto; }
             header, .project-entry { flex-direction: column; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
             .bio-text { padding-right: 0; }
@@ -170,7 +187,9 @@
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
                 <p>
-                    I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
+                    I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>.<br>
+                    Invited to the Science Scholars (Top 5%) for academic excellence. My<br>
+                    interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
                 <div class="social-links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> /
@@ -178,14 +197,14 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Profile Picture -->
+            <!-- Clickable Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
         </header>
 
         <!-- Technical Projects -->
-        <section>
+        <section class="project-list">
             <h2>Technical Projects</h2>
 
             <!-- Project 1 -->
