--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4;
+            line-height: 1.45;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar for one-page fit */
+            overflow: hidden; /* Disables scroll bar for perfect one-page fit */
         }
 
         .container {
@@ -39,7 +39,7 @@
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center; /* Centered as requested */
+            text-align: center; /* Centers the h1 and the p container */
         }
 
         /* Name Header: Lato 24pt, Unbolded, Centered */
@@ -47,19 +47,19 @@
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 10px 0;
+            margin: 0 0 12px 0;
             color: #000;
-            text-align: center;
         }
 
-        /* Bio Paragraph: Spaced and Wrapped exactly */
+        /* Bio Paragraph: Block is centered, but text is left-aligned like Rahul's */
         .bio-text p {
             margin: 0;
-            line-height: 1.45;
-            display: inline-block;
+            text-align: left; 
+            display: inline-block; /* Shrinks to content width so parent can center it */
+            line-height: 1.5;
         }
 
-        /* Hyperlink Styles */
+        /* Hyperlink Styles: Blue, turns orange on hover */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -73,9 +73,10 @@
 
         .social-links {
             margin-top: 12px;
+            text-align: center;
         }
 
-        /* Profile Picture: Sized to 180px */
+        /* Profile Picture sized to match Rahul's (~180px) */
         .profile-img {
             width: 180px;
             height: 180px;
@@ -186,6 +187,7 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
+                <!-- 36 Words total: Line 1 (13), Line 2 (11), Line 3 (12) -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>.<br>
                     Invited to the Science Scholars (Top 5%) for academic excellence. My<br>
