--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4;
+            line-height: 1.45;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar for perfect one-page fit */
+            height: 100vh;
+            overflow: hidden; /* Disables scroll bar completely */
         }
 
         .container {
-            max-width: 850px;
-            margin: 2vh auto; 
+            max-width: 860px;
+            margin: 0 auto;
             padding: 0 20px;
-            height: 96vh; 
+            height: 100vh;
             display: flex;
             flex-direction: column;
+            justify-content: center; /* Centers everything vertically on the screen */
         }
 
-        /* Header Section - Centered block */
+        /* Header Section */
         header {
             display: flex;
             align-items: center;
@@ -39,28 +41,28 @@
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center; /* Centers the name and the block below */
+            text-align: center; /* Centers the name and the text block */
         }
 
-        /* Name Header: Lato 24pt, Unbolded, Centered */
+        /* Name Header: Lato 24pt, Centered */
         .bio-text h1 {
-            font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 8px 0;
+            margin: 0 0 10px 0;
             color: #000;
         }
 
-        /* Bio Paragraph: Left-aligned text within a centered block for neatness */
+        /* Bio Paragraph: Left-aligned within a centered block. 
+           Width adjusted to 615px to remove gaps in your 13-11-12 word lines. */
         .bio-text p {
             margin: 0;
             text-align: left; 
             display: inline-block;
+            max-width: 615px; 
             line-height: 1.5;
-            max-width: 580px; /* Constrains width to balance the line breaks */
         }
 
-        /* Hyperlink Styles: turns orange on hover */
+        /* Hyperlinks: Blue, orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -90,43 +92,35 @@
 
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
-            font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 1.5vh; 
-            margin-bottom: 1vh;
+            margin-top: 15px; 
+            margin-bottom: 15px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 4px;
+            padding-bottom: 6px;
             font-weight: 400;
             color: #000;
-            text-align: left;
         }
 
         .project-list {
-            flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            gap: 15px; /* Tight vertical spacing between projects */
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 1.5vh; 
             align-items: flex-start;
         }
 
-        .project-entry:last-child {
-            margin-bottom: 0;
-        }
-
-        /* Neat Thumbnails: Cover crops bars, Top anchor keeps graph titles visible */
+        /* Project Thumbnails: Height increased to 195px to stop Sentinel cut-off */
         .project-img, .placeholder-box {
-            width: 300px; 
-            height: 155px; /* Reduced height to prevent bottom cut-off */
+            width: 320px; 
+            height: 195px; 
             margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
-            object-fit: cover; 
-            object-position: top; 
+            object-fit: contain; /* Full visibility of the graph */
+            background-color: #000; /* Blends with the Sentinel background */
             border: 1px solid #eee;
         }
 
@@ -151,7 +145,7 @@
             margin: 1px 0;
         }
 
-        /* Category Label: 10.5pt */
+        /* Colored Category Label: Exactly 10.5pt */
         .project-category {
             font-style: italic;
             font-weight: 700;
@@ -159,7 +153,7 @@
         }
 
         .project-links {
-            font-size: 0.9em;
+            font-size: 0.95em;
             margin: 4px 0 !important;
         }
 
@@ -170,13 +164,13 @@
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 500px; 
+            max-width: 480px; 
             line-height: 1.4;
         }
 
         @media (max-width: 750px) {
             body { overflow: auto; }
-            .container { height: auto; }
+            .container { height: auto; padding: 40px 20px; }
             header, .project-entry { flex-direction: column; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
             .bio-text { padding-right: 0; }
@@ -190,7 +184,7 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
-                <!-- Exact Wrap: Line 1 (13), Line 2 (11), Line 3 (12) -->
+                <!-- Exactly 36 words wrapped 13-11-12 -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>.<br>
                     Invited to the Science Scholars (Top 5%) for academic excellence. My<br>
@@ -202,7 +196,6 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
